[gd_scene load_steps=2 format=3 uid="uid://xipsfofahwd0"]

[ext_resource type="Script" path="res://game/hud/hud.gd" id="1_6u4j5"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6u4j5")

[node name="LblScore" type="Label" parent="."]
offset_left = 4.0
offset_top = 3.0
offset_right = 83.0
offset_bottom = 29.0
text = "Score: 000"

[node name="LblLevel" type="Label" parent="."]
offset_left = 142.0
offset_top = 2.0
offset_right = 221.0
offset_bottom = 28.0
text = "Level: 00"

[node name="LblLives" type="Label" parent="."]
offset_left = 274.0
offset_top = 3.0
offset_right = 353.0
offset_bottom = 29.0
text = "Lives: ooo"

[node name="PlayerHeatBar" type="ProgressBar" parent="."]
offset_left = 343.0
offset_top = 86.0
offset_right = 356.0
offset_bottom = 193.0
step = 0.5
value = 12.5
fill_mode = 3
show_percentage = false
